[package]
name = "binance-campaign-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
axum = { version = "0.7.5", features = ["tower-log"] }
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
hex = "0.4.3"
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
log = "0.4.21"
openssl = "0.10.64"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2", "pem"]}
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
serde_urlencoded = "0.7.1"
thiserror = "1.0.58" 
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
 

# Axum builds on the types in Tower
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace"] }
url = "2.5.0"
urlencoding = "2.1.3"
